# terraform-okta-authentication-policy-stack

./: .gitignore  Makefile  README.md  main.tf  make_doc.py  outputs.tf  pyproject.toml  schema.py  validate_yaml.py  variables.tf  versions.tf
examples/: basic_example.tf  complex_example.tf
examples/basic_example/: README.md  basic_example.tf
examples/complex_example/: README.md  complex_example.tf  versions.tf
test/: go.mod  go.sum  main_test.go
