[tool.poetry]
name = "terraform-okta-authentication-policy-stack"
version = "0.1.0"
description = ""
authors = ["Lukas <lukasindre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.3"
pyyaml = "^6.0.2"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
